# terminal

./: .gitignore  Cargo.toml  DECISIONS.md  IMPLEMENTATION_PLAN.md  README.md  REARCHITECTURE.md  Taskfile.yml  pyproject.toml
crates/browser-use-agent/: Cargo.toml
crates/browser-use-agent/src/: config_overrides.rs  lib.rs
crates/browser-use-agent/src/compact/: mod.rs
crates/browser-use-agent/src/context/: mod_tests.rs
crates/browser-use-agent/src/decision/: retry.rs
crates/browser-use-agent/src/entrypoint/: mod.rs  provider.rs
crates/browser-use-agent/src/session/: reconstruct.rs
crates/browser-use-agent/src/tools/: registry.rs  registry_tests.rs
crates/browser-use-agent/src/tools/handlers/: browser.rs  browser_tests.rs  mod.rs  python.rs  python_tests.rs  subagent_tests.rs
crates/browser-use-agent/src/turn/: dispatch.rs  dispatch_tests.rs  fusion_tests.rs  sampling.rs  sampling_tests.rs
docs/: HANDOFF.md  STATUS.md  agent-alignment-overview.md  agent-gap-log.md  browser-harness-conformance-template.md  browser-harness-parity-plan.md  completion-audit.md  rewrite-verification.md  rust-core-migration-plan.md  rust-migration-one-page-summary.md  terminal-ui-product-ux.md
prompts/: browser-agent-system.md  browser-script-tool-description.md  browser-tool-description.md  dataset-case-user.md  python-tool-description.md
scripts/: browser-parity-snapshot.py  live-browser-boundary-smoke.sh  tui-terminal-smoke.py
tests/: test_agent_loop.py  test_browser_daemon.py  test_browser_runtime.py  test_cdp_client.py  test_codex_auth.py  test_datasets.py  (+4 more)
(+64 files in other folders)
